--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,23 +36,23 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.aopalliance-1.0.jar=../../../../../Downloads/aopalliance-1.0.jar
-file.reference.aws-java-sdk-core-1.11.528.jar=../../../../../Downloads/aws-java-sdk-core-1.11.528.jar
-file.reference.aws-java-sdk-s3-1.11.528.jar=../../../../../Downloads/aws-java-sdk-s3-1.11.528.jar
-file.reference.commons-fileupload-1.3.1.jar=../../../../../Downloads/commons-fileupload-1.3.1.jar
-file.reference.commons-io-2.4.jar=../../../../../Downloads/commons-io-2.4.jar
-file.reference.httpclient-4.5.7.jar=../../../../../Downloads/httpclient-4.5.7.jar
-file.reference.httpcore-4.4.11.jar=../../../../../Downloads/httpcore-4.4.11.jar
-file.reference.jackson-annotations-2.9.8.jar=../../../../../Downloads/jackson-annotations-2.9.8.jar
-file.reference.jackson-core-2.9.8.jar=../../../../../Downloads/jackson-core-2.9.8.jar
-file.reference.jackson-databind-2.9.8.jar=../../../../../Downloads/jackson-databind-2.9.8.jar
-file.reference.joda-time-2.10.1.jar=../../../../../Downloads/joda-time-2.10.1.jar
+file.reference.aopalliance-1.0.jar=C:\\Users\\ANON\\Desktop\\yassineprojet\\aopalliance-1.0.jar
+file.reference.aws-java-sdk-core-1.11.528.jar=C:\\Users\\ANON\\Desktop\\yassineprojet\\aws-java-sdk-core-1.11.528.jar
+file.reference.aws-java-sdk-s3-1.11.528.jar=C:\\Users\\ANON\\Desktop\\yassineprojet\\aws-java-sdk-s3-1.11.528.jar
+file.reference.commons-fileupload-1.3.1.jar=C:\\Users\\ANON\\Desktop\\yassineprojet\\commons-fileupload-1.3.1.jar
+file.reference.commons-io-2.4.jar=C:\\Users\\ANON\\Desktop\\yassineprojet\\commons-io-2.4.jar
+file.reference.httpclient-4.5.7.jar=C:\\Users\\ANON\\Desktop\\yassineprojet\\httpclient-4.5.7.jar
+file.reference.httpcore-4.4.11.jar=C:\\Users\\ANON\\Desktop\\yassineprojet\\httpcore-4.4.11.jar
+file.reference.jackson-annotations-2.9.8.jar=C:\\Users\\ANON\\Desktop\\yassineprojet\\jackson-annotations-2.9.8.jar
+file.reference.jackson-core-2.9.8.jar=C:\\Users\\ANON\\Desktop\\yassineprojet\\jackson-core-2.9.8.jar
+file.reference.jackson-databind-2.9.8.jar=C:\\Users\\ANON\\Desktop\\yassineprojet\\jackson-databind-2.9.8.jar
+file.reference.joda-time-2.10.1.jar=C:\\Users\\ANON\\Desktop\\yassineprojet\\joda-time-2.10.1.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
 j2ee.deploy.on.save=true
 j2ee.platform=1.7-web
-j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-storeconfig.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-4.4.2.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-jni.jar:${j2ee.server.home}/lib/tomcat-util-scan.jar:${j2ee.server.home}/lib/tomcat-util.jar:${j2ee.server.home}/lib/tomcat-websocket.jar:${j2ee.server.home}/lib/websocket-api.jar
+j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-storeconfig.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-4.5.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-jni.jar:${j2ee.server.home}/lib/tomcat-util-scan.jar:${j2ee.server.home}/lib/tomcat-util.jar:${j2ee.server.home}/lib/tomcat-websocket.jar:${j2ee.server.home}/lib/websocket-api.jar
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
@@ -61,16 +61,16 @@ javac.classpath=\
     ${libs.JAVADB_DRIVER_LABEL.classpath}:\
     ${libs.jstl.classpath}:\
     ${file.reference.aopalliance-1.0.jar}:\
-    ${file.reference.commons-fileupload-1.3.1.jar}:\
-    ${file.reference.commons-io-2.4.jar}:\
     ${file.reference.aws-java-sdk-core-1.11.528.jar}:\
     ${file.reference.aws-java-sdk-s3-1.11.528.jar}:\
-    ${file.reference.joda-time-2.10.1.jar}:\
-    ${file.reference.jackson-core-2.9.8.jar}:\
-    ${file.reference.jackson-databind-2.9.8.jar}:\
+    ${file.reference.commons-fileupload-1.3.1.jar}:\
+    ${file.reference.commons-io-2.4.jar}:\
+    ${file.reference.httpclient-4.5.7.jar}:\
     ${file.reference.httpcore-4.4.11.jar}:\
     ${file.reference.jackson-annotations-2.9.8.jar}:\
-    ${file.reference.httpclient-4.5.7.jar}
+    ${file.reference.jackson-core-2.9.8.jar}:\
+    ${file.reference.jackson-databind-2.9.8.jar}:\
+    ${file.reference.joda-time-2.10.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
